--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "dcl-project",
   "version": "1.0.0",
   "description": "My new Decentraland project",
+  "type": "module",
   "scripts": {
-    "start": "dcl start",
+    "start": "nodemon index.js & dcl start ",
     "build": "build-ecs",
     "watch": "build-ecs --watch",
     "deploy:now": "dcl export && now export",
@@ -14,11 +15,149 @@
   },
   "devDependencies": {
     "@dcl/eslint-config": "^1.0.1",
-    "decentraland-ecs": "latest"
+    "decentraland-ecs": "latest",
+    "nodemon": "^2.0.16"
   },
   "engines": {
     "node": ">=14.0.0",
     "npm": ">=6.0.0",
     "yarn": "please use npm"
-  }
+  },
+  "main": "index.js",
+  "bin": {
+    "dcl-project": "bin/game.js"
+  },
+  "dependencies": {
+    "acorn": "^8.7.1",
+    "acorn-jsx": "^5.3.2",
+    "ajv": "^7.2.4",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "argparse": "^2.0.1",
+    "array-union": "^2.1.0",
+    "balanced-match": "^1.0.2",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "buffer-from": "^1.1.2",
+    "callsites": "^3.1.0",
+    "chalk": "^4.1.2",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "commander": "^2.20.3",
+    "concat-map": "^0.0.1",
+    "cross-spawn": "^7.0.3",
+    "debug": "^4.3.4",
+    "deep-is": "^0.1.4",
+    "dir-glob": "^3.0.1",
+    "doctrine": "^3.0.0",
+    "escape-string-regexp": "^4.0.0",
+    "eslint": "^8.17.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-scope": "^5.1.1",
+    "eslint-utils": "^3.0.0",
+    "eslint-visitor-keys": "^3.3.0",
+    "espree": "^9.3.2",
+    "esquery": "^1.4.0",
+    "esrecurse": "^4.3.0",
+    "estraverse": "^4.3.0",
+    "esutils": "^2.0.3",
+    "eventemitter3": "^4.0.7",
+    "express": "^4.18.1",
+    "fast-deep-equal": "^3.1.3",
+    "fast-diff": "^1.2.0",
+    "fast-glob": "^3.2.11",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fast-levenshtein": "^2.0.6",
+    "fastq": "^1.13.0",
+    "file-entry-cache": "^6.0.1",
+    "fill-range": "^7.0.1",
+    "flat-cache": "^3.0.4",
+    "flatted": "^3.2.5",
+    "follow-redirects": "^1.15.1",
+    "fs.realpath": "^1.0.0",
+    "functional-red-black-tree": "^1.0.1",
+    "glob": "^7.2.3",
+    "glob-parent": "^6.0.2",
+    "globals": "^13.15.0",
+    "globby": "^11.1.0",
+    "has-flag": "^4.0.0",
+    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^2.0.6",
+    "ignore": "^5.2.0",
+    "import-fresh": "^3.3.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "is-plain-obj": "^3.0.0",
+    "isexe": "^2.0.0",
+    "js-yaml": "^4.1.0",
+    "json-schema-traverse": "^1.0.0",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
+    "levn": "^0.4.1",
+    "lodash.merge": "^4.6.2",
+    "lru-cache": "^6.0.0",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.5",
+    "minimatch": "^3.1.2",
+    "ms": "^2.1.2",
+    "natural-compare": "^1.4.0",
+    "once": "^1.4.0",
+    "optionator": "^0.9.1",
+    "parent-module": "^1.0.1",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-type": "^4.0.0",
+    "picomatch": "^2.3.1",
+    "prelude-ls": "^1.2.1",
+    "prettier": "^2.6.2",
+    "prettier-linter-helpers": "^1.0.0",
+    "punycode": "^2.1.1",
+    "queue-microtask": "^1.2.3",
+    "regexpp": "^3.2.0",
+    "require-from-string": "^2.0.2",
+    "requires-port": "^1.0.0",
+    "resolve-from": "^4.0.0",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "run-parallel": "^1.2.0",
+    "semver": "^7.3.7",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "slash": "^3.0.0",
+    "source-map": "^0.6.1",
+    "source-map-support": "^0.5.21",
+    "strip-ansi": "^6.0.1",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^7.2.0",
+    "terser": "^5.14.1",
+    "text-table": "^0.2.0",
+    "to-regex-range": "^5.0.1",
+    "tslib": "^1.14.1",
+    "tsutils": "^3.21.0",
+    "type-check": "^0.4.0",
+    "type-fest": "^0.20.2",
+    "typescript": "^4.7.3",
+    "uri-js": "^4.4.1",
+    "uuid": "^8.3.2",
+    "v8-compile-cache": "^2.3.0",
+    "which": "^2.0.2",
+    "word-wrap": "^1.2.3",
+    "wrappy": "^1.0.2",
+    "yallist": "^4.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WorkBronce/Decentraland.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/WorkBronce/Decentraland/issues"
+  },
+  "homepage": "https://github.com/WorkBronce/Decentraland#readme"
 }
