--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "color-name": "^1.1.4",
     "commander": "^2.20.3",
     "concat-map": "^0.0.1",
+    "cors": "^2.8.5",
     "cross-spawn": "^7.0.3",
     "debug": "^4.3.4",
     "deep-is": "^0.1.4",
