Sorted HighScore and added fake board players

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,15 @@
 {
     "cSpell.words": [
+        "callsites",
+        "espree",
+        "esquery",
+        "esrecurse",
+        "estraverse",
         "Highscore",
         "scorevalue",
         "screenspace"
+    ],
+    "cSpell.ignoreWords": [
+        "argparse"
     ]
 }
