--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My new Decentraland project",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js & dcl start ",
+    "start": "dcl start --web3 ",
     "build": "build-ecs",
     "watch": "build-ecs --watch",
     "deploy:now": "dcl export && now export",
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@dcl/eslint-config": "^1.0.1",
+    "@types/node": "^18.0.0",
     "decentraland-ecs": "latest",
     "nodemon": "^2.0.16"
   },
