--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
     "outFile": "./bin/game.js",
     "allowJs": true,
     "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    
   },
   "include": ["src/**/*.ts"],
   "extends": "./node_modules/decentraland-ecs/types/tsconfig.json"
